--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
    <div class="christmas" >
     <div class="message">
         <h1>Merry Christmas!</h1>
-        <h2>BÀ trùm làm giá , Bà trùm khó tánh haha ♥</h2>
+        <h2>BÀ trùm làm giá , bà trùm khó tánh haha ♥</h2>
     </div>
     <div class="window ">
         <div class="santa">
